--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,10 @@
     <string name="no_account">I do not have an account</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="about_us">What is ElevateU?</string>
+    <string name="email_contact">Contact: elevateu@edu.fh-joanneum.at</string>
+    <string name="meet_our_team">Meet our team</string>
+    <string name="students_of_medical_informatics">Students of medical informatics</string>
+    <string name="developers">Developers: Lana Cvijic and Beyza Arbaz</string>
+    <string name="slogan">Beauty, informed! - ElevateU</string>
 </resources>
