My account activity development started

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="students_of_medical_informatics">Students of medical informatics</string>
     <string name="developers">Developers: Lana Cvijic and Beyza Arbaz</string>
     <string name="slogan">Beauty, informed! - ElevateU</string>
+    <string name="my_account">My account</string>
 </resources>
