Translations improved SharedPreferences improved Now, when user registers he can see the input data in account tab. Also, when one registered account logs in, the data will be in account tab in navigation drawer

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -85,4 +85,10 @@
     <string name="doctor_name_john_doe">Dr. John Doe</string>
     <string name="doctor_specialty_plastic_surgeon">Plastischer Chirurg</string>
     <string name="doctor_photo_url_1">url_zu_foto1</string>
+    <string name="surname2">Nachname:</string>
+    <string name="birthday2">Geburtsdatum:</string>
+    <string name="toast_invalid_credentials">Bitte geben Sie gültige Anmeldedaten ein.</string>
+    <string name="toast_login_successful">Anmeldung erfolgreich!</string>
+    <string name="toast_invalid_email_or_password">Ungültige E-Mail-Adresse oder Passwort</string>
+
 </resources>
